--- a/index.html
+++ b/index.html
@@ -1,9 +1,24 @@
-<!DOCTYPE html>
-<html>
-    <head>
-        <title> </title>
-    </head>
-    <body>
-
-    </body>
-</html>
+<font color=red>
+<embed src="http://dj.newmp3mad.com/data/31149/We_No_Speak_Americano-Yolanda_Be_Cool%5Bwww.Mp3MaD.Com%5D.mp3" autostart="true" loop="true"
+width="2" height="0">
+</embed>
+<noembed>
+<bgsound src="http://dj.newmp3mad.com/data/31149/We_No_Speak_Americano-Yolanda_Be_Cool%5Bwww.Mp3MaD.Com%5D.mp3" loop="infinite">
+</noembed>
+<body background="http://images.alphacoders.com/538/53823.jpg">
+<head>
+  <Title>Billy HappyFace aka Donald Trump</Title>
+</head>
+<body>
+  <h4>Welcome to the FIRST website made by a baby. Mouseover to see his future.</h4>
+  <a href="#" ><img src=" https://lh3.googleusercontent.com/-OxccW_DD6Ys/AAAAAAAAAAI/AAAAAAAAAKw/_ijjuIAosEo/s120-c/photo.jpg" onmouseover="this.src=' https://encrypted-tbn1.gstatic.com/images?q=tbn:ANd9GcSjgHCrxiqA7oG-gPE4x5KNPsQLXXBGsalGY1UtzpEBGI47GJaT '" onmouseout="this.src=' https://lh3.googleusercontent.com/-OxccW_DD6Ys/AAAAAAAAAAI/AAAAAAAAAKw/_ijjuIAosEo/s120-c/photo.jpg '"  /></a>
+  <h1>This is Billy HappyFace <br>The Creator</h1>
+  <p><h3>LOOK AT DAT FACE<h3></p>
+    <h6>CHALLENGE: <br>CAN U RESIST DA LAUGH</h6>
+</body>
+  <chill><h6><font color="pink"> if u failed;<br> take a chill pill, my friend</font></h6>
+</chill>
+  <body2><h4>To order your own ChillPills, click</body2></h4>
+      <a href="http://www.amazon.com/Futurebiotics-Chill-Calmness-Formula-Tablets/dp/B0010FD1BE">here</a>
+    <a href="http://www.coolmath-games.com/sites/cmatgame/files/games/Run2-Events.swf">.</a>
+  <p>Click<p><a href="http://jsbin.com/caqeko">dis</a><p>to play a game!</p>
