--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@ width="2" height="0">
   <Title>Billy HappyFace aka Donald Trump</Title>
 </head>
 <body>
+  <link rel="stylesheet" type="text/css" href="style.css">
   <h4>Welcome to the FIRST website made by a baby. Mouseover to see his future.</h4>
   <a href="#" ><img src=" https://lh3.googleusercontent.com/-OxccW_DD6Ys/AAAAAAAAAAI/AAAAAAAAAKw/_ijjuIAosEo/s120-c/photo.jpg" onmouseover="this.src=' https://encrypted-tbn1.gstatic.com/images?q=tbn:ANd9GcSjgHCrxiqA7oG-gPE4x5KNPsQLXXBGsalGY1UtzpEBGI47GJaT '" onmouseout="this.src=' https://lh3.googleusercontent.com/-OxccW_DD6Ys/AAAAAAAAAAI/AAAAAAAAAKw/_ijjuIAosEo/s120-c/photo.jpg '"  /></a>
   <h1>This is Billy HappyFace <br>The Creator</h1>
