--- a/index.html
+++ b/index.html
@@ -23,3 +23,5 @@ width="2" height="0">
       <a href="http://www.amazon.com/Futurebiotics-Chill-Calmness-Formula-Tablets/dp/B0010FD1BE">here</a>
     <a href="http://www.coolmath-games.com/sites/cmatgame/files/games/Run2-Events.swf">.</a>
   <p>Click<p><a href="http://jsbin.com/caqeko">dis</a><p>to play a game!</p>
+  
+  <object type='application/x-shockwave-flash' data='C:\Users\Avanish\Desktop\test.swf' width='1080' height='720'><param name='flashvars' value='clickTag=learn2recycle.github.io&clickTarget=_blank' /><param name='allowScriptAccess' value='always' /><param name='movie' value='C:\Users\Avanish\Desktop\test.swf' /><param name='bgcolor' value='#ff99ff'></object>
