--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@ width="2" height="0">
 
 <param name="lolol" value="test.swf">
 
-<embed src="test.swf" width="550" height="400">
+<embed src="/test.swf" width="550" height="400">
 
 </embed>
 
