--- a/index.html
+++ b/index.html
@@ -24,12 +24,8 @@ width="2" height="0">
     <a href="http://www.coolmath-games.com/sites/cmatgame/files/games/Run2-Events.swf">.</a>
   <p>Click<p><a href="http://jsbin.com/caqeko">dis</a><p>to play a game!</p>
   
-  <object width="550" height="400">
-
-<param name="lolol" value="test.swf">
-
-<embed src="/test.swf" width="550" height="400">
-
-</embed>
-
+<object width="550" height="400">
+  <param name="lolol" value="test.swf">
+  <embed src="test.swf" width="550" height="400">
+  </embed>
 </object>
