--- a/index.html
+++ b/index.html
@@ -26,6 +26,6 @@ width="2" height="0">
   
 <object width="550" height="400">
   <param name="lolol" value="test.swf">
-  <embed src="test.swf" width="550" height="400">
+  <embed src="/akarlapudi03.github.io/test.swf" width="550" height="400">
   </embed>
 </object>
