--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@ width="2" height="0">
   <p>Click<p><a href="http://jsbin.com/caqeko">dis</a><p>to play a game!</p>
   
 <object width="550" height="400">
-  <param name="lolol" value="test.swf">
-  <embed src="/akarlapudi03.github.io/test.swf" width="550" height="400">
+  <param name="poob" value="boop.swf">
+  <embed src="/akarlapudi03.github.io/boop.swf" width="550" height="400">
   </embed>
 </object>
