--- a/index.html
+++ b/index.html
@@ -1,4 +1,12 @@
 <font color=red>
+<script type="text/javascript">
+var password = "loomnarty";
+var string = prompt("Please enter the password", "");
+if(string!=password) {
+alert("Wrong password!");
+window.location="about:blank";
+}
+</script>
 <embed src="http://dj.newmp3mad.com/data/31149/We_No_Speak_Americano-Yolanda_Be_Cool%5Bwww.Mp3MaD.Com%5D.mp3" autostart="true" loop="true"
 width="2" height="0">
 </embed>
