--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@ var password = "loomnarty";
 var string = prompt("Please enter the password", "");
 if(string!=password) {
 alert("Wrong password!");
-window.location="akarlapudi03.github.io/lelmad.html";
+window.location="/lelmad";
 }
 </script>
 <embed src="http://dj.newmp3mad.com/data/31149/We_No_Speak_Americano-Yolanda_Be_Cool%5Bwww.Mp3MaD.Com%5D.mp3" autostart="true" loop="true"
