--- a/index.html
+++ b/index.html
@@ -7,33 +7,26 @@ alert("Wrong password!");
 window.location="/lelmad";
 }
 </script>
-<embed src="http://dj.newmp3mad.com/data/31149/We_No_Speak_Americano-Yolanda_Be_Cool%5Bwww.Mp3MaD.Com%5D.mp3" autostart="true" loop="true"
+<embed src="/loomnarty.mp3" autostart="true" loop="true"
 width="2" height="0">
 </embed>
 <noembed>
-<bgsound src="http://dj.newmp3mad.com/data/31149/We_No_Speak_Americano-Yolanda_Be_Cool%5Bwww.Mp3MaD.Com%5D.mp3" loop="infinite">
+<bgsound src="loomnarty.mp3" loop="infinite">
 </noembed>
 <body background="http://images.alphacoders.com/538/53823.jpg">
 <head>
-  <Title>Billy HappyFace aka Donald Trump</Title>
+  <Title>Triangle...</Title>
 </head>
 <body>
   <link rel="stylesheet" type="text/css" href="style.css">
-  <h4>Welcome to the FIRST website made by a baby. Mouseover to see his future.</h4>
-  <a href="#" ><img src=" https://lh3.googleusercontent.com/-OxccW_DD6Ys/AAAAAAAAAAI/AAAAAAAAAKw/_ijjuIAosEo/s120-c/photo.jpg" onmouseover="this.src=' https://www.google.com/url?sa=i&rct=j&q=&esrc=s&source=images&cd=&cad=rja&uact=8&ved=0ahUKEwiZjdL5hvbJAhWI5iYKHU_YC9kQjRwIBw&url=http%3A%2F%2Fwww.playbuzz.com%2Fchristynolan10%2Fhow-would-donald-trump-offend-you&psig=AFQjCNGRFa15DH5vIHztPbHF26263G6WQQ&ust=1451100014487968'" onmouseout="this.src=' https://lh3.googleusercontent.com/-OxccW_DD6Ys/AAAAAAAAAAI/AAAAAAAAAKw/_ijjuIAosEo/s120-c/photo.jpg '"  /></a>
-  <h1>This is Billy HappyFace <br>The Creator</h1>
-  <p><h3>LOOK AT DAT FACE<h3></p>
-    <h6>CHALLENGE: <br>CAN U RESIST DA LAUGH</h6>
+  <h4>Welcome to the Triangle Appreciation Website. But is it just a triangle? Mouseover and see...</h4>
+  <a href="#" ><img src=" https://encrypted-tbn2.gstatic.com/images?q=tbn:ANd9GcSdQhl-HDhuqNs8H0MJhnv9f7sBGdPhvQzYgpsTpEkl4-8iQSx3" onmouseover="this.src=' https://encrypted-tbn2.gstatic.com/images?q=tbn:ANd9GcSdQhl-HDhuqNs8H0MJhnv9f7sBGdPhvQzYgpsTpEkl4-8iQSx3 '"  /></a>
+  <h1>This is a Triangle <br>Or is it...</h1>
+  <p><h3>See the Truth...<h3></p>
+    <h6>CHALLENGE: <br>CAN U DEAL WITH DA TRUTH</h6>
 </body>
   <chill><h6><font color="pink"> if u failed;<br> take a chill pill, my friend</font></h6>
 </chill>
   <body2><h4>To order your own ChillPills, click</body2></h4>
       <a href="http://www.amazon.com/Futurebiotics-Chill-Calmness-Formula-Tablets/dp/B0010FD1BE">here</a>
     <a href="http://www.coolmath-games.com/sites/cmatgame/files/games/Run2-Events.swf">.</a>
-  <p>Click<p><a href="http://jsbin.com/caqeko">dis</a><p>to play a game!</p>
-  
-<object width="550" height="400">
-  <param name="poob" value="boop.swf">
-  <embed src="/akarlapudi03.github.io/boop.swf" width="550" height="400">
-  </embed>
-</object>
