--- a/index.html
+++ b/index.html
@@ -30,3 +30,6 @@ width="2" height="0">
   <body2><h4>To order your own ChillPills, click</body2></h4>
       <a href="http://www.amazon.com/Futurebiotics-Chill-Calmness-Formula-Tablets/dp/B0010FD1BE">here</a>
     <a href="http://www.coolmath-games.com/sites/cmatgame/files/games/Run2-Events.swf">.</a>
+  
+<body3><h3>To play a game made by the Illuminati, click</body3></h3>
+      <a src="/game">here</a>
