--- a/index.html
+++ b/index.html
@@ -32,4 +32,4 @@ width="2" height="0">
     <a href="http://www.coolmath-games.com/sites/cmatgame/files/games/Run2-Events.swf">.</a>
   
 <body3><h3>To play a game made by the Illuminati, click</body3></h3>
-      <a src="/game">here</a>
+      <a href="akarlapudi03.github.io/game">here</a>
